
Version 1.0.0.2 - 2006/08/20

	! fixed a few visual glitches in the option pages (static edges on tree views
	  etc.)
	! fixed forgetting the tab nickname length limit.
	* the message input box is now only switched to auto bidirectional mode when a
	  valid RTL keyboard layout is installed on the system. This re-enables the 
	  ability to switch keyboard layouts with the right shift/ctrl keyboard shortcut
	  without changing text direction. If a RTL keyboard layout is installed, the old
	  behaviour is preserved (right ctrl/shift will change to RTL).
	! workaround for avatar display glitches with certain versions of loadavatars
	  (bottom avatar may not appear until window is resized).
	
Version 1.0.0.1 - 2006/08/09

	! fixed updater support (301, invalid response).
	! fixed bug when re-attaching a temporary contact to a new
	  container while the option to delete temporary contacts on close
	  is enabled.
	! fixed minor issue with [color] bbcode
	! using the own UIN as fallback for own nickname, to solve the "Unknown
	  Contact" problem which can appear when the own nickname is not 
	  properly set by the protocol.
	! fixed a few issues with global splitter positioning.
	* selecting offline sub protocol throws a warning instead of an error.
	- removed the feature to load a background image for the message input area.
	  was causing too many troubles and people did not understand that it was an
	  experimental feature, thus sending bug reports.
	! fixed problem with freezing when opening a message window by clicking on a
	  typing notify popup
	! fixed vertiacl maximize (patch by SloMo)	  	
	! some translation fixes
	! fixed rare bug with lost keyboard layouts
	! fixed clickable nicks in group chats do no longer depend on smileyadd (very
	  weird bug).

Version 1.0.0.0

	Released and declared as "stable" branch, 2006/07/30
	
	For detailed changelog see: changelog.OLD and:
	http://miranda.or.at/tabsrmm/tabsrmm-changelog/
		