@@ -2592,6 +2592,7 @@ panel_found:
                         TrackPopupMenu(hMenu, 0, pt.x, pt.y, 0, hwndDlg, NULL);
                         DestroyMenu(hMenu);
                     }
+					return TRUE;
                 }
                 break;
             }
