@@ -27,7 +27,9 @@ Version 1.0.0.2 - 2006/08/20
 	  behaviour is preserved (right ctrl/shift will change to RTL).
 	! workaround for avatar display glitches with certain versions of loadavatars
 	  (bottom avatar may not appear until window is resized).
-	
+	! minor splitter issue fixed
+	! fixed context menu problems with help.dll
+
 Version 1.0.0.1 - 2006/08/09
 
 	! fixed updater support (301, invalid response).
